<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="2dp"

    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topGL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="18.8dp" />

        <TextView
            android:id="@+id/avatarIV"
            android:layout_width="39dp"
            android:layout_height="39dp"
            android:background="@color/colorAvatar"
            android:textAlignment="center"
            android:textColor="@color/colorLocation"
            android:textSize="24sp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@+id/leftGL"
            app:layout_constraintTop_toTopOf="@+id/topGL" />


        <!--<androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/avatarIV"
            android:layout_width="39dp"
            android:layout_height="39dp"
            app:layout_constraintStart_toStartOf="@+id/leftGL"
            app:layout_constraintTop_toTopOf="@+id/topGL"
            app:srcCompat="@color/colorAvatar" />-->

        <TextView
            android:id="@+id/accountNameTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:text="@string/account_name"
            android:textColor="@color/colorAccountName"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/rightGL"
            app:layout_constraintStart_toEndOf="@+id/avatarIV"
            app:layout_constraintTop_toTopOf="@+id/topGL" />

        <TextView
            android:id="@+id/timeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:text="@string/created_time"
            android:textColor="@color/colorTime"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/avatarIV"
            app:layout_constraintTop_toBottomOf="@+id/accountNameTV" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/locationIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            app:layout_constraintStart_toStartOf="@+id/leftGL"
            app:layout_constraintTop_toBottomOf="@+id/avatarIV"
            app:srcCompat="@drawable/ic_newsfeed_geotag" />

        <TextView
            android:id="@+id/locationTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="13dp"
            android:fontFamily="@font/ubuntu_light"
            android:text="@string/location"
            android:textColor="@color/colorLocation"
            android:textSize="13sp"
            app:layout_constraintEnd_toStartOf="@+id/rightGL"
            app:layout_constraintStart_toEndOf="@+id/locationIV"
            app:layout_constraintTop_toBottomOf="@+id/avatarIV" />

        <TextView
            android:id="@+id/hashTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:lineHeight="24sp"
            android:text="@string/hash"
            android:textColor="@color/colorTV"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/rightGL"
            app:layout_constraintStart_toEndOf="@+id/leftGL"
            app:layout_constraintTop_toBottomOf="@+id/locationTV"
            tools:targetApi="p" />

        <TextView
            android:id="@+id/descriptionTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:lineHeight="24sp"
            android:text="@string/description"
            android:textColor="@color/colorTV"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/rightGL"
            app:layout_constraintStart_toEndOf="@+id/leftGL"
            app:layout_constraintTop_toBottomOf="@+id/hashTV"
            tools:targetApi="p" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView1"
            android:layout_width="210dp"
            android:layout_height="172dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="6dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintStart_toEndOf="@+id/leftGL"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTV"
            app:srcCompat="@android:drawable/ic_menu_gallery" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="85.1dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="2dp"
            android:scaleType="fitXY"
            app:layout_constraintStart_toEndOf="@+id/imageView1"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTV"
            app:layout_constraintEnd_toStartOf="@id/rightGL"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_height="85.1dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="6dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@id/rightGL"
            app:layout_constraintStart_toEndOf="@+id/imageView1"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="32dp" />

        <ImageView
            android:id="@+id/viewsIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            app:srcCompat="@drawable/ic_newsfeed_postbar_views"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            app:layout_constraintStart_toEndOf="@+id/leftGL"/>

        <TextView
            android:id="@+id/viewsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/colorTime"
            android:layout_marginTop="9dp"
            android:layout_marginStart="8dp"
            android:text="512"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            app:layout_constraintStart_toEndOf="@+id/viewsIV" />

        <ImageView
            android:id="@+id/commentsIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="12dp"
            app:srcCompat="@drawable/ic_newsfeed_postbar_comments"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@id/commentsTV"/>

        <TextView
            android:id="@+id/commentsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:textColor="@color/colorTime"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="2dp"
            android:text="2"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@id/rightGL" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
