<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.svitlanamozharovska.agronomist.MapViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorBackground"
                app:title="">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:background="@drawable/ic_navibar_logo" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:apiKey="@string/apiKey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar"  />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleGroup"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="13dp"
            app:singleSelection="true"
            app:checkedButton="@id/listButton"
            app:layout_constraintEnd_toStartOf="@id/rightGL"
            app:layout_constraintStart_toEndOf="@id/leftGL"
            app:layout_constraintTop_toBottomOf="@+id/appbar">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mapButton"
                android:layout_width="171dp"
                android:backgroundTint="@color/colorWhite"
                android:text="@string/map"
                android:textAlignment="center"
                android:textSize="13sp"
                android:textColor="@color/colorButton"
                app:strokeColor="@color/colorButton"
                app:strokeWidth="1.1dp"
                android:layout_height="match_parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/listButton"
                listListener="@{() -> viewModel.onClick()}"
                android:layout_width="171dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorButton"
                android:textColor="@color/colorWhite"
                android:text="@string/line"
                android:textAlignment="center"
                android:textSize="13sp"
                />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <!--<ImageButton
            android:id="@+id/updateLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/invalid_name"
            app:layout_constraintEnd_toStartOf="@id/rightGL"
            app:layout_constraintTop_toBottomOf="@id/toggleGroup"/>

        <ImageButton
            android:id="@+id/showForThisLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bt_map_search_request"
            app:layout_constraintStart_toEndOf="@id/leftGL"
            app:layout_constraintTop_toBottomOf="@id/toggleGroup"/>-->

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/bottom_nav_menu"
            android:background="@color/colorBNV"
            app:itemBackground="@color/colorBNV"
            app:itemIconTint="@color/colorLocation"
            app:itemTextColor="@color/colorLocation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>